# pxlslog-explorer

./: .gitignore  Cargo.toml  readme.md
common/: Cargo.toml
common/src/: lib.rs
common/src/action/: identifier.rs  mod.rs
common/src/data/: action.rs  actionkind.rs  actions.rs  error.rs  identifier.rs  mod.rs
common/src/parse/: dynamic.rs  error.rs  mod.rs  pxlslog.rs
common/src/util/: region.rs
filter/: Cargo.toml
filter/src/: error.rs  filter.rs  interface.rs  main.rs
render/: Cargo.toml
render/src/: error.rs  main.rs  palette.rs
render/src/config/: builder.rs  error.rs  mod.rs
render/src/config/source/: cli.rs  mod.rs  toml.rs
render/src/render/: frame.rs  gradient.rs  mod.rs  pixel.rs  renderer.rs
render/src/util/: io.rs  mod.rs  region.rs
src/: action.rs  cli.rs  command.rs  error.rs  filter.rs  main.rs  palette.rs  parser.rs  pixel.rs  render.rs  util.rs
src/commands/: filter.rs  mod.rs  render.rs  stats.rs
