[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
exitcode = "1.1"
anyhow = "1.0"
nom = "7.1"
nom-supreme = "0.8"
num-traits = "0.2.15"
bitflags = "2.3"
thiserror = "1.0.44"
nom_locate = "4.1.0"

[dev-dependencies]
arbitrary = "1.2"
arbtest = "0.2"
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
