[package]
name = "filter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.2", features = ["derive","std","suggestions", "help", "usage"]}
log = "0.4"
sha2 = "0.10"
hex = "0.4"
predicates = "3.0.3"
simplelog = "0.12.1"
thiserror = "1.0.40"
nom-supreme = "0.8.0"

# [profile.release]
# lto = true
# debug = true
