[package]
name = "render"
version = "0.2.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
chrono = "0.4"
clap = { version = "4.2", features = ["derive","std","suggestions", "help", "usage", "cargo"], default-features = false }
exitcode = "1.1"
hex = "0.4"
image = "0.24"
log = "0.4"
num-traits = "0.2"
rayon = "1.5"
tinytemplate = "1.2"
nonzero_ext = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simplelog = "0.12"
sha2 = "0.10"
anyhow = "1.0"
nom = "7.1"
nom-supreme = "0.8"
itertools = "0.10.5"
num-integer = "0.1.45"
thiserror = "1.0.40"
toml = "0.7.4"

[dev-dependencies]
arbitrary = "1.2"
arbtest = "0.2"
assert_cmd = "2.0.8"
assert_fs = "1.0.10"

# [profile.release]
# lto = true
# debug = true

# [build]
# rustc-wrapper = "/home/user/.cargo/bin/sccache"
